Update screenshots and fix some layout issues

--- a/viewer/static/styles/viewer.css
+++ b/viewer/static/styles/viewer.css
@@ -315,9 +315,14 @@ a {
 .og-details .share {
   padding-bottom: 5px;
 }
+.og-details > div {
+  position: relative;
+}
 
 .details, .feedback {
   position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .feedback p, .feedback button {
